# swing-trading

./: .codex-prompt-r1.md  .codex-prompt.txt  .codex-r1-err.txt  .codex-r1-out.txt  .codex-r1-prompt.txt  .copowers-findings.md  .gitignore  CLAUDE.md  cleanup-locked-scratch-dirs.ps1  pyproject.toml  swing.config.toml  verify_phase10.py
.claude/: settings.json
.claude/agents/: implementer-opus-high.md  implementer-opus-max.md  implementer-opus-xhigh.md  implementer-sonnet-high.md  implementer-sonnet-med.md  pattern-labeler.md
data/phase13-t2-sb1-corpus/: README.md  pattern_exemplars_dump.jsonl
docs/: 18-B1-insert-observation-write-barrier-dispatch-brief.md  18-D-fix1-check1-baseline-dispatch-brief.md  18-D-nightly-half-executing-plans-dispatch-brief.md  18-D-nightly-half-writing-plans-dispatch-brief.md  18-D-research-health-monitor-executing-plans-dispatch-brief.md  18-D-research-health-monitor-writing-plans-dispatch-brief.md  18-D-treadmill-review-adjudication-charc.md  18-H-web-polish-charc-return-report.md  18-H-web-polish-dispatch-brief.md  18-H.1-charc-return-report.md  18-H.4-charc-return-report-ab-headtohead.md  18-H.4-schwab-setup-self-lock-dispatch-brief.md  18-H.4.1-charc-return-report.md  18-H.4.1-replaceable-holder-dispatch-brief.md  18-H.5-dead-code-hardening-audit-dispatch-brief.md  3e10-dark-theme-brief.md  3e16-cadence-review-trade-summary-brief.md  3e8-bundle-1-advisory-parity-brief.md  3e8-bundle-2-sell-side-advisories-brief.md  3e8-bundle-3-maturity-and-stop-tighten-hints-brief.md  3e8-bundle-3-return-report.md  3e8-sell-side-advisories-investigation-brief.md  3e8-sell-side-advisories-investigation.md  Bugs.txt  CLAUDE.md-archive.md  applied-research-pattern-cohort-detector-evaluator-brainstorming-return-report.md  applied-research-pattern-cohort-detector-evaluator-dispatch-brief.md  applied-research-pattern-cohort-detector-evaluator-executing-plans-dispatch-brief.md  applied-research-pattern-cohort-detector-evaluator-executing-plans-return-report.md  applied-research-pattern-cohort-detector-evaluator-writing-plans-dispatch-brief.md  applied-research-pattern-cohort-detector-evaluator-writing-plans-return-report.md  arc1-pipeline-observability-brainstorming-dispatch-brief.md  arc1-pipeline-observability-executing-dispatch-brief.md  arc1-pipeline-observability-writing-plans-dispatch-brief.md  arc2-logging-slice1-executing-dispatch-brief.md  arc2-logging-slice2-executing-dispatch-brief.md  arc2-logging-slice2-writing-plans-dispatch-brief.md  arc3-xmax-thumbnail-executing-dispatch-brief.md  arc4-cash-reconciliation-brainstorming-dispatch-brief.md  arc4-cash-reconciliation-writing-plans-dispatch-brief.md  (+457 more)
docs/runbooks/: schwab-cassette-recording.md
exports/diagnostics/: aplus-sensitivity-v2-20260523T230131Z.csv  aplus-sensitivity-v2-20260523T230131Z.md  aplus-sensitivity-v2-20260524T162641Z.md  aplus-sensitivity-v2-20260524T181554Z.csv  aplus-sensitivity-v2-20260524T181554Z.md  aplus-sensitivity-v2-20260524T205849Z.csv  aplus-sensitivity-v2-20260524T205849Z.md
reference/: books-corpus-index.md  journal_quick_reference.md  rs-universe-2026-04-17-1.csv  swing_trading_priority_terms_reference.md
reference/Future Work/: 2026-04-22-rebuttal-critique-and-implementation-proposal.md  2026-04-23-bifurcated-strategic-implementation-proposal-v2.1.md  2026-04-23-rebuttal-response-for-implementors.md
reference/methodology/: dst-take-profit-and-trail.md  minervini-sell-side-rules.md  minervini-trend-template.md
reference/schwab-api/: account-documentation.md  (+3 more)
research/: README.md  phase-0-tasks.md
scripts/: benchmark_evaluate_warm.py  comms_ui.py  comms_unread_hook.py  convert_books_pdf_to_md.py  diagnose_schwab_executionlegs.py  director_bootstrap_charc.md  director_bootstrap_rd.md  fix_phase2_misleading_audit_rows.py  harness_probe.py  orchestrator_bootstrap.md  record_codex_mcp_pattern_review_cassettes.py  record_pattern_labeler_cassettes.py  record_schwab_cassettes.py  record_schwab_quote_cassette.py  research_health.py  role_mail.py  start_directors.ps1  tool_health.py  weekly_glance.py
swing/: __init__.py  cli.py  cli_config.py  cli_schwab.py  config.py  config_overrides.py  config_user.py  config_validation.py  log_correlation.py  logging_config.py  logging_setup.py  logs_maintenance.py  prices.py
swing/data/: db.py  (+7 more)
tests/: _v3_tokens_helper.py  conftest.py  test_cli_journal_cash_kinds.py  test_cli_log_surface.py  test_config_classifier.py  test_config_flag_pattern.py  test_config_stop_advisory_bundle2.py  test_config_stop_advisory_bundle3.py  test_log_correlation.py  test_logging_config.py  test_logging_correlation_e2e.py  test_logging_leak_guard.py  test_logging_loggers_override.py  test_logging_setup.py  test_logs_maintenance.py  test_packaging_dependencies.py  test_smoke.py
tmp/: codex_review_diff.txt  codex_review_harness_only.txt
(+1713 files in other folders)
