[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swing"
version = "0.1.0"
description = "Personal swing-trading tool — Disciplined Swing Trader + Minervini SEPA"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pandas>=2.2",
    "yfinance>=0.2.40",
    "pyarrow>=15",
    "tomli>=2; python_version<'3.11'",
    "exchange_calendars>=4.5",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
]

[project.scripts]
swing = "swing.cli:main"

[tool.setuptools.packages.find]
include = ["swing*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers -m 'not slow'"
markers = [
    "slow: tests that fetch prices or run the full pipeline (skip by default)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
