[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swing"
version = "0.1.0"
description = "Personal swing-trading tool — Disciplined Swing Trader + Minervini SEPA"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pandas>=2.2",
    "yfinance>=0.2.40",
    "pyarrow>=15",
    "tomli>=2; python_version<'3.11'",
    "tomli_w>=1.0",
    "exchange_calendars>=4.5",
    "pyyaml>=6",
    "jinja2>=3.1",
    "schwabdev>=2.4.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-recording>=0.13",
    "pytest-xdist>=3.5.0",
    "ruff>=0.5",
    # Phase 13 T1.SB0 (Codex R2 Major #1 fix 2026-05-18): chart-bytes parity
    # test at `tests/pipeline/test_chart_bytes_parity_through_ohlcv_cache.py`
    # imports mplfinance at module load. Including in `dev` makes the
    # documented `pip install -e ".[dev,web]"` profile sufficient for the
    # T-T1.SB0.4 acceptance gate. `charts` extra remains as the operator-
    # facing runtime opt-in for `swing pipeline run` chart rendering.
    "mplfinance>=0.12",
]
charts = ["mplfinance>=0.12"]
web = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "jinja2>=3.1,<4.0",
]

[project.scripts]
swing = "swing.cli:main"

[tool.setuptools.packages.find]
include = ["swing*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# pytest-xdist `-n auto` parallelizes the fast suite across logical CPUs.
# Post-phase10-infra-bundle T-3 (2026-05-13): empirically 415s → ~63s
# (6.6x speedup) at 3276 fast tests on Windows. Override per-invocation
# with `-n 0` for debugger workflows (`--pdb`, `-k` with verbose output)
# or with `-n logical`/`-n N` if `auto` causes contention.
addopts = "-ra --strict-markers -m 'not slow' -n auto"
markers = [
    "slow: tests that fetch prices or run the full pipeline (skip by default)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
